Closed Bug 336968 Opened 19 years ago Closed 18 years ago

Function: _getvalue does not dereference "result" after assigning to *result

Categories

(Core Graveyard :: Plug-ins, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

References

(Blocks 1 open bug, )

Details

(Keywords: coverity)

Attachments

(1 obsolete file)

the result is that this code never returns its generic error, which is wrong.
Attached patch look at the right value (obsolete) — Splinter Review
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #221182 - Flags: superreview?(jst)
Attachment #221182 - Flags: review?(jst)
Comment on attachment 221182 [details] [diff] [review] look at the right value r+sr=jst
Attachment #221182 - Flags: superreview?(jst)
Attachment #221182 - Flags: superreview+
Attachment #221182 - Flags: review?(jst)
Attachment #221182 - Flags: review+
Comment on attachment 221182 [details] [diff] [review] look at the right value mozilla/modules/plugin/base/src/ns4xPlugin.cpp 1.137 mozilla/modules/plugin/base/src/ns4xPlugin.cpp 1.138
Attachment #221182 - Attachment is obsolete: true
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: