Bug 336968 Function: _getvalue does not dereference "result" after assigning to *result r=jst sr=jst